# ull-fleet-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
backend/ull-fleet-server/: .env.example  Cargo.toml  build.rs
backend/ull-fleet-server/src/: config.rs  error.rs  lib.rs  main.rs
backend/ull-fleet-server/src/api/: handlers.rs  mod.rs  routes.rs  state.rs
backend/ull-fleet-server/src/api/extractors/: mod.rs  ota_upload.rs
backend/ull-fleet-server/src/domain/: ota.rs
backend/ull-fleet-server/src/infra/: mod.rs  pending_update_repository.rs  update_storage.rs
backend/ull-fleet-server/tests/: api.rs
