[package]
name = "ull-fleet-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", features = ["macros"] }
rusqlite = { version = "0.37", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2"
tokio = { version = "1.48", features = ["fs", "macros", "net", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
